--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:8u181-jdk
-    steps:
-      - checkout
-      - run:
-          name: Testing application
-          command: java -cp ./RunUt-1.0-SNAPSHOT.jar:RunUt/* org.junit.runner.JUnitCore test.TestClass
+version: 2.1
+
+orbs:
+  maven: circleci/maven@0.0.12
+
+workflows:
+  maven_test:
+    jobs:
+      - maven/test
